Improve support for Oracle 19c