@@ -17,13 +17,10 @@
 package org.labkey.bigiron.oracle;
 
 import org.apache.commons.lang3.StringUtils;
-import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.LogManager;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.Assert;
 import org.junit.Test;
-import org.labkey.api.collections.CsvSet;
 import org.labkey.api.data.DbScope;
 import org.labkey.api.data.dialect.AbstractDialectRetrievalTestCase;
 import org.labkey.api.data.dialect.DatabaseNotSupportedException;
@@ -35,9 +32,9 @@ import org.labkey.api.util.VersionNumber;
 
 import java.sql.DatabaseMetaData;
 import java.sql.SQLException;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
 /**
@@ -47,8 +44,6 @@ import java.util.Set;
  */
 public class OracleDialectFactory implements SqlDialectFactory
 {
-    private static final Logger _log = LogManager.getLogger(OracleDialectFactory.class);
-
     public OracleDialectFactory()
     {
         // Oracle JDBC driver should not be present in <tomcat>/lib
@@ -77,10 +72,12 @@ public class OracleDialectFactory implements SqlDialectFactory
 
         /*
             Parse the product version from the metadata, to return only the version number (i.e. remove text)
-            For the jdbcdriver I have, version is returned like:
+            Some examples we need to parse:
 
             Oracle Database 11g Enterprise Edition Release 11.2.0.2.0 - 64bit Production
             With the Partitioning, OLAP, Data Mining and Real Application Testing options
+
+            Oracle Database 19c Enterprise Edition Release 19.0.0.0.0 - Production\nVersion 19.3.0.0.0
         */
         String databaseProductVersion = md.getDatabaseProductVersion();
 
@@ -89,11 +86,10 @@ public class OracleDialectFactory implements SqlDialectFactory
 
         VersionNumber versionNumber = new VersionNumber(databaseProductVersion.substring(startIndex, endIndex));
 
-        // piggy back on Oracle11gDialect until incompatibilities are discovered
+        // Piggyback on Oracle11gDialect until incompatibilities are discovered
         if (versionNumber.getMajor() == 10)
             return new Oracle11gR1Dialect();
 
-        // Restrict to 11g
         if (versionNumber.getMajor() == 11)
         {
             if (versionNumber.getVersionInt() == 111)
@@ -102,17 +98,9 @@ public class OracleDialectFactory implements SqlDialectFactory
             if (versionNumber.getVersionInt() >= 112)
                 return new Oracle11gR2Dialect();
         }
-        if (versionNumber.getMajor() == 12)
-            return new Oracle12cDialect();
 
-        if (versionNumber.getMajor() > 12)
-        {
-            // Trust that's it's backwards compatible enough to treat like 12c
-            if (logWarnings)
-                _log.warn("LabKey Server has not been tested against Oracle version " + databaseProductVersion + ". 11g or 12c are recommended.");
-
+        if (versionNumber.getMajor() >= 12)
             return new Oracle12cDialect();
-        }
 
         throw new DatabaseNotSupportedException(getProductName() + " version " + databaseProductVersion + " is not supported. You must upgrade your database server installation to " + getProductName() + " version 11g or greater.");
     }
@@ -120,7 +108,10 @@ public class OracleDialectFactory implements SqlDialectFactory
     @Override
     public Collection<? extends Class<?>> getJUnitTests()
     {
-        return Arrays.asList(JdbcHelperTestCase.class, DialectRetrievalTestCase.class);
+        return List.of(
+            DialectRetrievalTestCase.class,
+            JdbcHelperTestCase.class
+        );
     }
 
     @Override
@@ -142,6 +133,8 @@ public class OracleDialectFactory implements SqlDialectFactory
                     "With the Partitioning, OLAP, Advanced Analytics and Real Application Testing options");
             validateVersion(Oracle12cDialect.class, "Oracle Database 12c Enterprise Edition Release 12.1.0.2.0 - 64bit Production\n" +
                     "With the Partitioning, OLAP, Advanced Analytics and Real Application Testing options");
+            validateVersion(Oracle12cDialect.class, "Oracle Database 19c Enterprise Edition Release 19.0.0.0.0 - Production\n" +
+                    "Version 19.3.0.0.0");
         }
 
         private void validateVersion(Class<? extends SqlDialect> expectedDialectClass, String version)
@@ -156,7 +149,6 @@ public class OracleDialectFactory implements SqlDialectFactory
             }
         }
     }
-
 
     public static class JdbcHelperTestCase extends Assert
     {
@@ -175,50 +167,53 @@ public class OracleDialectFactory implements SqlDialectFactory
                 @Override
                 protected Set<String> getGoodUrls()
                 {
-                    return new CsvSet(
+                    return Set.of(
                         // New syntax without id/password
-                        "jdbc:oracle:thin:@//myhost:1521/database," +
-                        "jdbc:oracle:thin:@//127.0.0.1:1521/database," +
-                        "jdbc:oracle:thin:@//localhost:8300/database," +
-                        "jdbc:oracle:thin:@//127.0.0.1/database," +
-                        "jdbc:oracle:thin:@//localhost/database," +
+                        "jdbc:oracle:thin:@//myhost:1521/database",
+                        "jdbc:oracle:thin:@//127.0.0.1:1521/database",
+                        "jdbc:oracle:thin:@//localhost:8300/database",
+                        "jdbc:oracle:thin:@//127.0.0.1/database",
+                        "jdbc:oracle:thin:@//localhost/database",
 
                         // New syntax with id/password
-                        "jdbc:oracle:thin:LabKey/TopSecrect@//myhost:1521/database," +
-                        "jdbc:oracle:thin:LabKey/TopSecrect@//127.0.0.1:1521/database," +
-                        "jdbc:oracle:thin:LabKey/TopSecrect@//localhost:8300/database," +
-                        "jdbc:oracle:thin:LabKey/TopSecrect@//127.0.0.1/database," +
-                        "jdbc:oracle:thin:LabKey/TopSecrect@//localhost/database," +
+                        "jdbc:oracle:thin:LabKey/TopSecrect@//myhost:1521/database",
+                        "jdbc:oracle:thin:LabKey/TopSecrect@//127.0.0.1:1521/database",
+                        "jdbc:oracle:thin:LabKey/TopSecrect@//localhost:8300/database",
+                        "jdbc:oracle:thin:LabKey/TopSecrect@//127.0.0.1/database",
+                        "jdbc:oracle:thin:LabKey/TopSecrect@//localhost/database",
 
                         // Old syntax without id/password
-                        "jdbc:oracle:thin:@myhost:1521:database," +
-                        "jdbc:oracle:thin:@127.0.0.1:1521:database," +
-                        "jdbc:oracle:thin:@localhost:8300:database," +
-                        "jdbc:oracle:thin:@127.0.0.1:database," +
-                        "jdbc:oracle:thin:@localhost:database," +
+                        "jdbc:oracle:thin:@myhost:1521:database",
+                        "jdbc:oracle:thin:@127.0.0.1:1521:database",
+                        "jdbc:oracle:thin:@localhost:8300:database",
+                        "jdbc:oracle:thin:@127.0.0.1:database",
+                        "jdbc:oracle:thin:@localhost:database",
 
                         // Old syntax with id/password
-                        "jdbc:oracle:thin:LabKey/TopSecrect@myhost:1521:database," +
-                        "jdbc:oracle:thin:LabKey/TopSecrect@127.0.0.1:1521:database," +
-                        "jdbc:oracle:thin:LabKey/TopSecrect@localhost:8300:database," +
-                        "jdbc:oracle:thin:LabKey/TopSecrect@127.0.0.1:database," +
-                        "jdbc:oracle:thin:LabKey/TopSecrect@localhost:database," +
+                        "jdbc:oracle:thin:LabKey/TopSecrect@myhost:1521:database",
+                        "jdbc:oracle:thin:LabKey/TopSecrect@127.0.0.1:1521:database",
+                        "jdbc:oracle:thin:LabKey/TopSecrect@localhost:8300:database",
+                        "jdbc:oracle:thin:LabKey/TopSecrect@127.0.0.1:database",
+                        "jdbc:oracle:thin:LabKey/TopSecrect@localhost:database",
 
                         // Others (from http://www.herongyang.com/JDBC/Oracle-JDBC-Driver-Connection-URL.html)
-                        "jdbc:oracle:thin:LabKey/TopSecret@localhost:1521:database," +
-                        "jdbc:oracle:thin:LabKey/TopSecret@:1521:database," +
-                        "jdbc:oracle:thin:LabKey/TopSecret@//localhost:1521/database," +
-                        "jdbc:oracle:thin:LabKey/TopSecret@//:1521/database," +
-                        "jdbc:oracle:thin:LabKey/TopSecret@//localhost/database," +
-                        "jdbc:oracle:thin:LabKey/TopSecret@///database");
+                        "jdbc:oracle:thin:LabKey/TopSecret@localhost:1521:database",
+                        "jdbc:oracle:thin:LabKey/TopSecret@:1521:database",
+                        "jdbc:oracle:thin:LabKey/TopSecret@//localhost:1521/database",
+                        "jdbc:oracle:thin:LabKey/TopSecret@//:1521/database",
+                        "jdbc:oracle:thin:LabKey/TopSecret@//localhost/database",
+                        "jdbc:oracle:thin:LabKey/TopSecret@///database"
+                    );
                 }
 
                 @NotNull
                 @Override
                 protected Set<String> getBadUrls()
                 {
-                    return new CsvSet("jddc:oracle:thin:@database," +
-                            "jdbc:oracle:thin://www.host.comdatabase");
+                    return Set.of(
+                        "jddc:oracle:thin:@database",
+                        "jdbc:oracle:thin://www.host.comdatabase"
+                    );
                 }
             };
 
